--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "3.4.2",
     "jade": "*",
     "mysql": "~2.0.1",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "MD5": "~1.2.0"
   },
   "engines": {
     "node": "0.10.25"
